--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@
 cache/
 out/
 
-# Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
+# Ignores lib and broadcast logs
+lib/
+broadcast/
 
 # Docs
 docs/
