--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/foundry-devops"]
+	path = lib/foundry-devops
+	url = https://github.com/chainaccelorg/foundry-devops
+[submodule "lib/openzeppelin-contracts"]
+	path = lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "lib/semaphore"]
+	path = lib/semaphore
+	url = https://github.com/semaphore-protocol/semaphore
+[submodule "lib/zk-kit"]
+	path = lib/zk-kit
+	url = https://github.com/privacy-scaling-explorations/zk-kit
