--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,11 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [
+	"@openzeppelin=lib/openzeppelin-contracts/contracts",
+	"@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
+	"@semaphore=lib/semaphore/packages/contracts/contracts",
+	"@zk-kit/incremental-merkle-tree.sol=lib/zk-kit/packages/incremental-merkle-tree.sol/contracts"
+]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
